GMM_Main/src/objects/Slot__c.object
<CustomObject>
    <fields>
        <fullName>Aggregate_Recommendation_w_Allowance__c</fullName>
        <label>Aggregate Recommendation w/Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Recommendation_w_o_Allowance__c</fullName>
        <label>Aggregate Recommendation w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <formula>casesafeid(Budget_Application__r.Parent__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_WithOut_Allowance__c</fullName>
        <label>Approved WithOut Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_With_Allowance__c</fullName>
        <label>Approved With Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BdgLineIdExtId__c</fullName>
        <externalId>true</externalId>
        <label>BdgLineIdExtId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetLine</label>
        <referenceTo>cb3__BudgetLine__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots_BdgLn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Application</label>
        <referenceTo>cb3__Budget__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prime_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prime Application</label>
        <referenceTo>Prime_Application__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_w_Allowance__c</fullName>
        <label>Recommended w/ Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_w_o_Allowance__c</fullName>
        <label>Recommended w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_w_Allowance__c</fullName>
        <label>Requested w/ Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_w_o_Allowance__c</fullName>
        <label>Requested w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Type__c</fullName>
        <label>Slot Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Slot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Slot_Type__c</columns>
        <columns>Recommended_w_Allowance__c</columns>
        <columns>Recommended_w_o_Allowance__c</columns>
        <columns>Requested_w_Allowance__c</columns>
        <columns>Requested_w_o_Allowance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Slot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>